ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-ingress

spec:
  rules:
    - host: myapp.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: web
                port:
                  number: 80
